# prefab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  VISION.md  justfile  loq.toml  pyproject.toml
.github/workflows/: build-embed.yml  build-renderer.yml  marvin-comment-on-issue.yml  marvin-comment-on-pr.yml  marvin-label-triage.yml  publish-renderer.yml  publish.yml  run-renderer-tests.yml  run-static.yml  run-tests.yml  run-upgrade-checks.yml  update-published-docs.yml  update-release-branch.yml
dev-docs/: renderer-build-release.md
docs/: actions.mdx  building-uis.mdx  css.mdx  docs.json  embed.js  installation.mdx  overview.mdx  playground-app.js  playground.mdx  quickstart.mdx  renderer.js  serve.mdx  testing.mdx  theming.mdx  welcome.mdx
docs-build/: README.md  extract_examples.py  generate_content.py  generate_playground_bundle.py  generate_protocol_pages.py  generate_protocol_ref.py  html_renderer.py  input.css  render_previews.py  safelist.html  scope_css.py
docs/_assessments/: colin-for-docs-pipeline.md
docs/_chunks/: charts-B9pxPib5.mjs  charts-C9Nyy8S5.mjs  charts-ChXGqs92.js  charts-Ckkk8hPy.mjs  charts-ImjonHdd.mjs  compound-calendar-BLDkkJAQ.mjs  compound-calendar-BOGnDJF7.mjs  compound-calendar-CkB6I6pK.mjs  compound-calendar-DOC33V6C.mjs  (+12 more)
renderer/: README.md  package-lock.json  package.json  vite-plugins.ts  vite.config.embed.ts  vite.config.mcp.ts  vite.config.playground.ts  vite.config.renderer.ts  vite.config.ts
schemas/: manifest.json
scripts/: build_showcase.py  generate_schemas.py
tests/: conftest.py  test_actions.py  test_app.py  test_auto_name.py  test_components.py  test_conditional.py  test_contract.py  test_define_use_state.py  test_form_model.py  test_renderer.py  test_response.py  test_responsive.py  test_rx.py  test_rx_forward_refs.py  test_simulator.py  test_themes.py
(+714 files in other folders)
