[project]
name = "prefab-ui"
version = "0.1.0"
description = "Build dynamic UIs from Python. A JSON DSL compiled to React."
authors = [{ name = "Jeremiah Lowin" }]
dependencies = ["pydantic>=2.0"]
requires-python = ">=3.10"
license = "Apache-2.0"

keywords = [
    "ui",
    "components",
    "react",
    "prefab",
    "json",
    "dsl",
    "MCP",
    "FastMCP",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.12.8",
    "ty>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefab_ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 5
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", ".git", "dist"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["COM812", "PLR0913", "SIM102"]
extend-select = ["B", "C4", "I", "PIE", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["prefab_ui"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001", "RUF013"]
"!src/**.py" = ["B", "C4", "PIE", "RUF", "SIM"]
